# british_airlines

./: pyproject.toml
data/clean/: reviews_clean.parquet
data/raw/: existing_reviews.parquet  past_reviews.parquet
data/transformed/: cleaned_sentiments.parquet  reviews_clean.parquet
data/txt data/: reviews_clean.txt
notebooks/: 01_load_and_validate_raw_data.ipynb  02_potential_hash_function.ipynb  02_transform_into_sentiment_analysis.ipynb  03_baseline_sentiment_analysis.ipynb  03_sentiment_analysis.ipynb  04_logistic_regression_model.ipynb  05_naive_bayes.ipynb  06_random_forest_model.ipynb  07_sgdclassifier_model.ipynb  08_lightgbm_model.ipynb  09_voting_classifier_model.ipynb  10_lexicon_model.ipynb
src/: config.py  data.py  paths.py  pipeline.py  split_and_tfidf.py  stemming_and_lemming.py
