[tool.poetry]
name = "src"
version = "0.1.0"
description = ""
authors = ["Ryan Slipe <rslipe@my.gcu.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.2.3"
requests = "^2.32.3"
jupyter = "^1.1.1"
beautifulsoup4 = "^4.12.3"
pyarrow = "^19.0.0"
matplotlib = "^3.10.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
