[tool.poetry]
name = "src"
version = "0.1.0"
description = ""
authors = ["Ryan Slipe <rslipe@my.gcu.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.2.3"
requests = "^2.32.3"
jupyter = "^1.1.1"
beautifulsoup4 = "^4.12.3"
pyarrow = "^19.0.0"
matplotlib = "^3.10.0"
seaborn = "^0.13.2"
plotly = "^5.24.1"
wordcloud = "^1.9.4"
nltk = "^3.9.1"
scikit-learn = "^1.6.1"
xgboost = "^2.1.3"
lightgbm = "^4.5.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
